--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+management.endpoint.health.show-components=always
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+management.health.diskspace.enabled=true
