Retry to connect if config server is down or hasn't started yet
This can happen when starting services with docker-compose up.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,10 @@ spring:
   profiles:
     active: dev
   config:
-    import: configserver:http://localhost:8071
+    import: configserver:http://configserver:8071
+  cloud:
+    config:
+      fail-fast: true
 
 management:
   endpoint:
