--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,31 @@
-version: '3'
-
-services:
-  licensingservice:
-    image: ostock/licensing-service:0.0.1-SNAPSHOT
-    ports:
-      - "8080:8080"
-
-    environment:
-      - "SPRING_PROFILES_ACTIVE=dev"
-
-    networks:
-      backend:
-        aliases:
-          - "licenseservice"
+version: '2.1'
 
 networks:
   backend:
     driver: bridge
+
+services:
+  configserver:
+    image: ostock/configserver:0.0.1-SNAPSHOT
+    ports:
+      - "8071:8071"
+    environment:
+      SPRING_PROFILES_ACTIVE: dev
+      SPRING_CLOUD_CONFIG_SERVER_GIT_DEFAULT-LABEL: test
+      ENCRYPT_KEY: INSYMETRIC
+    networks:
+      - backend
+
+  licensingservice:
+    image: ostock/licensing-service:0.0.1-SNAPSHOT
+    ports:
+      - "8080:8080"
+    environment:
+      - "SPRING_PROFILES_ACTIVE=dev"
+    depends_on:
+      configserver:
+        condition: service_started
+    networks:
+      backend:
+        aliases:
+          - "licenseservice"
