--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,14 @@ resilience4j.bulkhead:
       maxWaitDuration: 10ms
       maxConcurrentCalls: 20
 
+resilience4j.retry:
+  instances:
+    retryLicenseService:
+      maxRetryAttempts: 5
+      waitDuration: 10000
+      retry-exceptions:
+        - java.util.concurrent.TimeoutException
+
 management:
   endpoint:
     health:
