--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,3 +58,8 @@ management:
       enabled: true
     diskspace:
       enabled: true
+
+logging:
+  level:
+    org.springframework.web: WARN
+    com.optimagrowth: DEBUG
